--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -22,7 +22,6 @@ jobs:
     env:
       FRONTEND_DIR: frontend
       BUILD_DIR: frontend/build
-      DEPLOYMENT_BRANCH: github-pages-deployment
 
     steps:
       - name: Checkout repository
@@ -73,7 +72,7 @@ jobs:
       WORKTREE_PATH: /tmp/deployment-branch
 
     steps:
-      - name: Checkout repository (for Git context)
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -109,14 +108,6 @@ jobs:
               echo "Preserving data directory..."
               mkdir -p /tmp/data-backup
               cp -r ${{ env.DATA_DIR }}/* /tmp/data-backup/
-
-              # Verify data backup integrity
-              if [ ! "$(ls -A /tmp/data-backup)" ]; then
-                echo "Warning: Data backup appears empty but source directory is not!"
-                ls -la ${{ env.DATA_DIR }}
-              else
-                echo "Data backup successful with $(find /tmp/data-backup -type f | wc -l) files"
-              fi
             fi
 
             # Safer file deletion - explicitly exclude important directories
@@ -131,16 +122,6 @@ jobs:
               echo "Restoring data directory..."
               mkdir -p ${{ env.DATA_DIR }}
               cp -r /tmp/data-backup/* ${{ env.DATA_DIR }}/
-
-              # Verify data restoration
-              echo "Verifying data restoration..."
-              if [ "$(find ${{ env.DATA_DIR }} -type f | wc -l)" -eq "$(find /tmp/data-backup -type f | wc -l)" ]; then
-                echo "Data restoration verified successfully"
-              else
-                echo "Warning: Data restoration count mismatch"
-                ls -la ${{ env.DATA_DIR }}
-              fi
-
               rm -rf /tmp/data-backup
             fi
 
@@ -181,14 +162,7 @@ jobs:
             mkdir -p ${{ env.DATA_DIR }}
             echo '{
               "last_updated": "'$(date -u +"%Y-%m-%dT%H:%M:%SZ")'",
-              "message": "Initial frontend deployment, awaiting data generation",
-              "deployment_info": {
-                "commit_sha": "${{ github.sha }}",
-                "workflow_run_id": "${{ github.run_id }}",
-                "workflow_name": "${{ github.workflow }}",
-                "triggered_by": "${{ github.actor }}",
-                "repository": "${{ github.repository }}"
-              }
+              "message": "Initial deployment"
             }' > ${{ env.DATA_DIR }}/placeholder.json
 
             git add .
@@ -196,61 +170,45 @@ jobs:
             git push -u origin ${{ env.DEPLOYMENT_BRANCH }}
           fi
 
-      - name: Check GitHub Pages configuration
-        run: |
-          echo "Verifying repository is properly configured for GitHub Pages"
-          echo "Note: Make sure you've enabled GitHub Pages in repository settings"
-          echo "      with source set to 'GitHub Actions' under Build and Deployment"
-
-      - name: Create GitHub Pages artifact
+      # This step prepares files for GitHub Pages directly
+      - name: Prepare GitHub Pages deployment
         run: |
           set -e
-          echo "Creating GitHub Pages artifact from deployment branch..."
-          # Clean workspace to avoid duplicate artifacts
-          rm -rf /tmp/pages-artifact
-          mkdir -p /tmp/pages-artifact
-
-          # Checkout deployment branch to a specific location
-          git fetch origin ${{ env.DEPLOYMENT_BRANCH }}
-          git worktree add --detach /tmp/deployment-checkout ${{ env.DEPLOYMENT_BRANCH }}
-
-          # Copy all files including hidden ones
-          cd /tmp/deployment-checkout
-          cp -a . /tmp/pages-artifact/
+          echo "Preparing GitHub Pages deployment..."
           
-          # Verify content in clean directory
-          cd /tmp/pages-artifact
-          echo "--- Files prepared for artifact ---"
-          ls -la
+          # Create temporary directory for GitHub Pages content
+          rm -rf /tmp/pages-content
+          mkdir -p /tmp/pages-content
           
-          # Ensure critical files exist
-          if [ ! -f "index.html" ]; then
-            echo "Error: index.html not found in deployment branch"
-            exit 1
+          # Copy built files directly to the temporary directory
+          cp -r ${{ env.FRONTEND_BUILD_DIR }}/* /tmp/pages-content/
+          
+          # Create .nojekyll file
+          touch /tmp/pages-content/.nojekyll
+          
+          # Ensure data directory exists
+          mkdir -p /tmp/pages-content/${{ env.DATA_DIR }}
+          
+          # Copy existing data if available from deployment branch
+          if git ls-remote --heads origin ${{ env.DEPLOYMENT_BRANCH }} | grep -q ${{ env.DEPLOYMENT_BRANCH }}; then
+            git fetch origin ${{ env.DEPLOYMENT_BRANCH }}
+            git checkout FETCH_HEAD -- ${{ env.DATA_DIR }} || true
+            
+            if [ -d "${{ env.DATA_DIR }}" ]; then
+              cp -r ${{ env.DATA_DIR }}/* /tmp/pages-content/${{ env.DATA_DIR }}/ || true
+            fi
+          else
+            echo "No existing data to copy"
           fi
           
-          if [ ! -f ".nojekyll" ]; then
-            echo "Warning: .nojekyll file not found. Creating it."
-            touch .nojekyll
-          fi
-          
-          # Remove git directory before creating artifact
-          rm -rf .git
+          # List files that will be included in the artifact
+          echo "Files prepared for GitHub Pages:"
+          ls -la /tmp/pages-content/
           
           # Create artifact
-          tar -czf $GITHUB_WORKSPACE/github-pages.tar.gz --exclude=".git" .
-          
-          # Verify the artifact
-          if [ ! -f "$GITHUB_WORKSPACE/github-pages.tar.gz" ]; then
-            echo "Error: Failed to create GitHub Pages artifact"
-            exit 1
-          fi
-          
-          echo "GitHub Pages artifact created successfully ($(du -h $GITHUB_WORKSPACE/github-pages.tar.gz | cut -f1) in size)"
-          
-          # Clean up
+          cd /tmp/pages-content
+          tar -czf $GITHUB_WORKSPACE/github-pages.tar.gz .
           cd $GITHUB_WORKSPACE
-          git worktree remove /tmp/deployment-checkout
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-artifact@v4
@@ -259,6 +217,14 @@ jobs:
           path: github-pages.tar.gz
           retention-days: 1
           if-no-files-found: error
+
+      - name: Debug GitHub Pages settings
+        run: |
+          echo "IMPORTANT: Make sure GitHub Pages settings are configured correctly"
+          echo "Required settings:"
+          echo "- GitHub Pages must be enabled in repository settings"
+          echo "- Source must be set to 'GitHub Actions' under Build and deployment"
+          echo "- A custom domain can cause deployment issues if not properly configured"
 
   deploy-pages:
     environment:
@@ -274,7 +240,6 @@ jobs:
           artifact_name: github-pages
 
       - name: Output GitHub Pages URL
+        if: success()
         run: |
-          set -e
           echo "GitHub Pages site deployed to: ${{ steps.deployment.outputs.page_url }}"
-          echo "Deployment completed successfully at $(date -u +"%Y-%m-%dT%H:%M:%SZ")"
