--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -4,15 +4,18 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'scripts/**'
+      - 'data/**'
   workflow_dispatch:
   schedule:
     - cron: '0 */6 * * *'  # Run every 6 hours
 
-# Sets permissions of the GITHUB_TOKEN
 permissions:
   contents: write
   pages: write
   id-token: write
+  actions: write
 
 jobs:
   generate:
@@ -20,7 +23,6 @@ jobs:
     env:
       DATA_DIR: data
       DEPLOYMENT_BRANCH: github-pages-deployment
-    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -34,9 +36,7 @@ jobs:
 
       - name: Generate data
         run: |
-          # Create data directory if it doesn't exist
           mkdir -p data
-          # Run the data generation script
           python scripts/generate_data.py
 
       - name: Configure Git
@@ -47,14 +47,10 @@ jobs:
       - name: Update deployment branch with data
         run: |
           # Check if deployment branch exists
-          if git ls-remote --heads origin ${{ env.DEPLOYMENT_BRANCH }} | grep -q ${{ env.DEPLOYMENT_BRANCH }}; then
-            echo "Deployment branch exists. Updating it..."
+          if git ls-remote --exit-code --heads origin ${{ env.DEPLOYMENT_BRANCH }}; then
             # Clone the existing deployment branch to preserve frontend files
-            git fetch origin ${{ env.DEPLOYMENT_BRANCH }}
             mkdir -p /tmp/deployment-branch
-
-            git fetch origin ${{ env.DEPLOYMENT_BRANCH }}:${{ env.DEPLOYMENT_BRANCH }}
-            git worktree add --detach /tmp/deployment-branch ${{ env.DEPLOYMENT_BRANCH }}
+            git worktree add --detach /tmp/deployment-branch origin/${{ env.DEPLOYMENT_BRANCH }}
             cd /tmp/deployment-branch
             
             # Update only data files
@@ -62,50 +58,39 @@ jobs:
             mkdir -p ${{ env.DATA_DIR }}
             cp -r $GITHUB_WORKSPACE/${{ env.DATA_DIR }}/* ${{ env.DATA_DIR }}/
             
-            # Ensure .nojekyll file exists to disable Jekyll processing
-            touch .nojekyll
-            
             # Commit and push changes
             git add .
             if git diff --staged --quiet; then
               echo "No changes to commit for data files."
             else
               git commit -m "Update data files"
-              git push origin ${{ env.DEPLOYMENT_BRANCH }}
+              git push origin HEAD:${{ env.DEPLOYMENT_BRANCH }}
             fi
             
             # Clean up
             cd $GITHUB_WORKSPACE
             git worktree remove /tmp/deployment-branch
           else
-            echo "Deployment branch does not exist. Creating it..."
             # Create new orphan branch with just data
             git checkout --orphan ${{ env.DEPLOYMENT_BRANCH }}
             git rm -rf .
             mkdir -p ${{ env.DATA_DIR }}
-            
-            # Check if the source directory has content before copying
-            if [ -d "$GITHUB_WORKSPACE/${{ env.DATA_DIR }}" ] && [ "$(ls -A $GITHUB_WORKSPACE/${{ env.DATA_DIR }})" ]; then
-              cp -r $GITHUB_WORKSPACE/${{ env.DATA_DIR }}/* ${{ env.DATA_DIR }}/
-            else
-              # Create an empty placeholder if no data exists yet
-              echo '{"last_updated": "'$(date -u +"%Y-%m-%dT%H:%M:%SZ")'", "stats": {"users": 0, "events": 0, "average_response_time": 0}, "events": []}' > ${{ env.DATA_DIR }}/stats.json
-            fi
-            
-            # Create .nojekyll file to disable Jekyll processing
+            cp -r $GITHUB_WORKSPACE/${{ env.DATA_DIR }}/* ${{ env.DATA_DIR }}/
             touch .nojekyll
-            
             git add ${{ env.DATA_DIR }} .nojekyll
             git commit -m "Initial data files"
-            git push -u origin ${{ env.DEPLOYMENT_BRANCH }}
+            git push origin ${{ env.DEPLOYMENT_BRANCH }}
           fi
-
-      - name: Trigger frontend deployment
-        run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/dispatches \
-            -d '{"event_type":"trigger-frontend-build"}'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Trigger Frontend Deployment
+        if: success() && github.event_name != 'push'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'deploy-frontend.yml',
+              ref: 'main'
+            });
